--- a/style.css
+++ b/style.css
@@ -12,11 +12,29 @@ header {
     grid-column-start: 1;
     grid-column-end: 12;
     background-color: #BE3144;
+    height: 50px;
+}
+
+footer {
+    margin: auto;
+    grid-column-start: 1;
+    grid-column-end: 12;
+    background-color: #BE3144;
+    height: 50px;
 }
 
 h1 {
+    margin: auto;
     color: aliceblue;
     text-align: center;
+    font-family: 'Trebuchet MS';
+}
+
+h2 {
+    margin-top: 25px;
+    padding-left: 75px;
+    color: white;
+    font-size: 70px;
     font-family: 'Trebuchet MS';
 }
 
@@ -33,7 +51,7 @@ p {
 }
 
 strong {
-    color:#BE3144;
+    color: #BE3144;
 }
 
 .infos {
@@ -51,10 +69,9 @@ strong {
 
 }
 
-footer {
-    grid-column-start: 1;
-    grid-column-end: 12;
-    background-color: #BE3144;
+.p_inicial {
+    color: white;
+    text-align: justify;
 }
 
 ul {
@@ -77,10 +94,34 @@ a:visited {
 }
 
 a:hover {
-    background-color:#BE3144;
+    background-color: #BE3144;
     color: white;
 }
 
 li {
     float: left;
+}
+
+div {
+    display: inline-block;
+}
+
+.div1 {
+    margin-top: -30px;
+    margin-left: 50px;
+    margin-right: 600px;
+}
+
+.div2 {
+    display: flex;
+    justify-content: center;
+    margin-top: -500px;
+    margin-left: 700px;
+    margin-right: 50px;
+    padding-bottom: 50px;
+}
+
+.imagem_programming {
+    max-height: 50%;
+    max-width: 60%;
 }
