--- a/style.css
+++ b/style.css
@@ -166,9 +166,13 @@ label {
 }
 
 form {
-    margin-top: -25px;
+    margin-top: -50px;
     margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 20px;
+    border: 2px solid #BE3144;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .rd_sexo {
